@@ -8,7 +8,7 @@ import org.springframework.stereotype.Component;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
 
 @Component
@@ -16,8 +16,15 @@ public class LocalFileStorage implements FileStorage {
     @Override
     public String storeFile(String folder, FileInfo info, InputStream stream) throws StoreFileException {
         try {
-        var filePath = Paths.get(folder).resolve(info.name()).toAbsolutePath();
+            Path dir = Path.of(folder);
+
+            if (Files.notExists(dir)) {
+                Files.createDirectory(dir);
+            }
+
+            Path filePath = dir.resolve(info.name()).toAbsolutePath();
             Files.copy(stream, filePath, StandardCopyOption.REPLACE_EXISTING);
+
             return filePath.toUri().getPath();
 
         } catch (IOException e) {
